--- a/style.css
+++ b/style.css
@@ -1,3 +1,104 @@
-h2 {
-  color: purple;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  width: 375px;
+}
+
+.header {
+  color: #6070ff;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 375px;
+  height: 48px;
+  margin-top: 10px;
+}
+
+.header a {
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: 12px;
+  padding: 10px 12px;
+  color: #6070ff;
+}
+
+.hamburger {
+  cursor: pointer;
+  width: 18px;
+  height: 12px;
+  transition: all 0.25s;
+  position: relative;
+  margin-right: 35px;
+}
+
+.hamburger-top,
+.hamburger-middle,
+.hamburger-bottom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 2px;
+  background: currentColor;
+  transform: rotate(0);
+  transition: all 0.5s;
+  border-radius: 8px;
+}
+
+.hamburger-middle {
+  transform: translateY(5px);
+}
+
+.hamburger-bottom {
+  transform: translateY(10px);
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #344563;
+  width: 375px;
+  height: 590px;
+  background-image: url(/assets/header-shapes-mobile1.svg);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.padding {
+  padding-right: 24px;
+  padding-left: 24px;
+}
+
+.hero h2 {
+  font-size: 40px;
+  font-weight: 700;
+  max-width: 300px;
+  margin-bottom: 12px;
+  color: #172b4d;
+}
+
+.hero a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  color: #7f8cff;
+  margin-top: 12px;
+}
+
+.social {
+  display: flex;
+  margin-left: 24px;
+  margin-top: 12px;
+}
+
+.sc-item {
+  margin-left: 20px;
 }
