--- a/style.css
+++ b/style.css
@@ -192,6 +192,27 @@ body {
   background-color: white;
   border: 1px solid #6070ff;
   border-radius: 8px;
+  cursor: pointer;
+}
+
+.card-btn:hover {
+    color: white;
+    background-color: #6070FF;
+    box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
+}
+
+.card-btn:active {
+    color: white;
+    background-color: #2230D2;
+    box-shadow: none;
+}
+
+.card-btn:disabled {
+    color: #5E6C84;
+    background: none;
+    box-shadow: none;
+    border-color: #C1C7D0;
+    cursor: no-drop;
 }
 
 .about-me {
