--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
   color: #344563;
   width: 375px;
   height: 590px;
-  background-image:
+  background-image: 
     url(./assets/header-shapes-mobile1.svg),
     url(https://achikdesign.com/mv-assets/header-shapes-mobile1.svg);
   background-repeat: no-repeat;
@@ -196,23 +196,23 @@ body {
 }
 
 .card-btn:hover {
-    color: white;
-    background-color: #6070FF;
-    box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
+  color: white;
+  background-color: #6070ff;
+  box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
 }
 
 .card-btn:active {
-    color: white;
-    background-color: #2230D2;
-    box-shadow: none;
+  color: white;
+  background-color: #2230d2;
+  box-shadow: none;
 }
 
 .card-btn:disabled {
-    color: #5E6C84;
-    background: none;
-    box-shadow: none;
-    border-color: #C1C7D0;
-    cursor: no-drop;
+  color: #5e6c84;
+  background: none;
+  box-shadow: none;
+  border-color: #c1c7d0;
+  cursor: no-drop;
 }
 
 .about-me {
