--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ body {
 
 .card-tags {
   list-style-type: none;
+  margin-bottom: 12px;
 }
 
 .card-tag-html {
@@ -183,6 +184,12 @@ body {
   margin-right: 8px;
   background-color: #ebebff;
 }
+
+.card-tag-js {
+  float: left;
+  background-color: #ebebff;
+}
+
 .card-tag {
   color: #6070ff;
   font-size: 12px;
@@ -192,7 +199,8 @@ body {
 }
 
 .card-action {
-  padding: 12px 0;
+  padding-top: 40px;
+  padding-bottom: 12px;
 }
 
 .card-btn {
