--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ body {
 
 .q-a {
   margin: 24px;
+  margin-bottom: 90px;
 }
 
 .qa {
@@ -275,4 +276,74 @@ body {
 
 .closed summary img {
   transform: rotate(-90deg);
+}
+
+.contact {
+  background-image: url(./assets/contact-bg.svg);
+  background-repeat: no-repeat;
+  background-position: 153px 30px;
+  background-color: #6070ff;
+  color: white;
+  border-top-left-radius: 100px;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
+  margin: 24px;
+  padding-top: 103px;
+  padding-bottom: 45px;
+}
+
+.contact-descrition {
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.contact-descrition h3 {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+
+input {
+  width: calc(100% - 16px);
+  height: 48px;
+  border-radius: 8px;
+  border: none;
+  padding-left: 16px;
+}
+
+input::placeholder {
+  color: #172b4d;
+  font-size: 17px;
+  font-weight: 400;
+}
+
+textarea {
+  width: calc(100% - 32px);
+  height: 170px;
+  border-radius: 8px;
+  border: none;
+  padding-left: 16px;
+  padding-top: 16px;
+  padding-right: 16px;
+}
+
+textarea::placeholder {
+  color: #b3bac5;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+form button {
+  width: 142px;
 }
