--- a/style.css
+++ b/style.css
@@ -29,11 +29,18 @@ header {
   margin: auto;
 }
 
-.nav-desktop a {
+.logo {
   text-decoration: none;
   font-size: 18px;
   font-weight: 700;
   color: #6070ff;
+}
+
+.nav-item {
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 500;
+  color: #344563;
 }
 
 .nav-sections {
@@ -48,6 +55,15 @@ header {
 .nav-sections li {
   padding: 10px 12px;
   cursor: pointer;
+}
+
+.nav-sections li:hover {
+  color: #091e42;
+  background-color: #eeeeee;
+  border-radius: 4px;
+  box-shadow: 2px 2px 23px 2px rgba(167,174,255,0.75);
+  -webkit-box-shadow: 2px 2px 23px 2px rgba(167,174,255,0.75);
+  -moz-box-shadow: 2px 2px 23px 2px rgba(167,174,255,0.75);
 }
 
 .hamburger-btn {
