--- a/style.css
+++ b/style.css
@@ -59,11 +59,11 @@ header {
 
 .nav-sections li:hover {
   color: #091e42;
-  background-color: #eeeeee;
+  background-color: #eee;
   border-radius: 4px;
-  box-shadow: 2px 2px 23px 2px rgba(167,174,255,0.75);
-  -webkit-box-shadow: 2px 2px 23px 2px rgba(167,174,255,0.75);
-  -moz-box-shadow: 2px 2px 23px 2px rgba(167,174,255,0.75);
+  box-shadow: 2px 2px 23px 2px rgba(167, 174, 255, 0.75);
+  -webkit-box-shadow: 2px 2px 23px 2px rgba(167, 174, 255, 0.75);
+  -moz-box-shadow: 2px 2px 23px 2px rgba(167, 174, 255, 0.75);
 }
 
 .hamburger-btn {
