--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ header {
   z-index: 999;
 }
 
+.hidden {
+  display: none;
+}
+
+.nav-mobile {
+  display: none;
+}
+
 .nav-desktop {
   display: flex;
   justify-content: space-between;
@@ -385,6 +393,53 @@ form {
 form button {
   width: 142px;
   margin: auto;
+}
+
+@media only screen and (max-width: 768px) {
+  .nav-mobile {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 46px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding-left: 30px;
+    padding-right: 43px;
+    padding-top: 24px;
+    background-color: #6070ffef;
+    animation: SlideInLeft 1.2s ease-in-out;
+  }
+
+  .nav-mobile button {
+    margin-right: 0;
+    width: 100%;
+    text-align: right;
+    font-size: 20px;
+    font-weight: 600;
+    border-style: none;
+    color: white;
+    background: none;
+  }
+
+  .nav-mobile ul {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .nav-mobile ul li {
+    list-style: none;
+  }
+
+  .a-mobile {
+    font-size: 32px;
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
+  }
 }
 
 /* Small screens */
