--- a/style.css
+++ b/style.css
@@ -851,3 +851,10 @@ form button {
 .hidden-popup {
   transform: scale(0);
 }
+
+.error {
+  color: rgb(201, 1, 1);
+  padding: 8px;
+  border-radius: 4px;
+  background-color: rgba(255, 195, 195, 0.89);
+}
